--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,14 +49,14 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -151,14 +151,13 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 #create custom workspaces
 #----------------------------------------------------------------------------------------------
-assign [class="steam"] $ws8
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec --no-startup-id "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -212,12 +211,8 @@ bar {
 #append_layout ~/.config/i3/workspace-1.json
 #append_layout ~/.config/i3/workspace-2.json
 #exec  "i3-msg 'workspace 1; append_layout ~/.config/i3/workspace-1.json'"
-exec  "i3-msg 'workspace 1; exec firefox'"
-exec  "i3-msg 'workspace 2; exec gnome-terminal'"
-exec  "i3-msg 'workspace 3; exec flatpak run --command=telegram-desktop org.telegram.desktop -autostart'"
-exec  "i3-msg 'workspace 4; exec code'"
-exec  "i3-msg 'workspace 5; exec thunderbird'"
+exec  --no-startup-id "i3-msg 'workspace 2; exec gnome-terminal'"
 
-#language
-#switch language with ctrl+shift
-exec_always  "setxkbmap -layout eng,de,ru -option grp:ctrl_space_toggle"
+# Move the current workspace to the next output
+# (effectively toggles when you only have two outputs)
+bindsym $mod+x move workspace to output next
