--- a/.config/i3/config
+++ b/.config/i3/config
@@ -207,11 +207,19 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 bar {
         status_command i3status
 }
+
 #save and start saved layout
-#append_layout ~/.config/i3/workspace-1.json
-#append_layout ~/.config/i3/workspace-2.json
-#exec  "i3-msg 'workspace 1; append_layout ~/.config/i3/workspace-1.json'"
+exec  --no-startup-id "i3-msg 'workspace 1; exec firefox'"
 exec  --no-startup-id "i3-msg 'workspace 2; exec gnome-terminal'"
+exec  --no-startup-id "i3-msg 'workspace 3; exec gnome-terminal'"
+exec  --no-startup-id "i3-msg 'workspace 4; exec gnome-terminal'"
+exec  --no-startup-id "sleep 0.5 && i3-msg 'workspace 5; exec /usr/bin/flatpak run --branch=stable --arch=x86_64 --command=telegram-desktop --file-forwarding org.telegram.desktop -- @@u %u @@'"
+exec  --no-startup-id "i3-msg 'workspace 6; exec thunderbird'"
+exec  --no-startup-id "sleep 1 && i3-msg 'workspace 7; exec spotify'"
+exec  --no-startup-id "sleep 2 && i3-msg 'workspace 8; exec /usr/bin/flatpak run --branch=stable --arch=x86_64 --command=com.discordapp.Discord com.discordapp.Discord'"
+
+# Start on workspace 1
+exec --no-startup-id "sleep 4 && i3-msg 'workspace 1'"
 
 # Move the current workspace to the next output
 # (effectively toggles when you only have two outputs)
