--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ why/
 .viminfo
 .vimrc
 .var/
+.npm/
+screenshots/
 #git ignore
 .config/caja
 .config/cinnamon
@@ -94,4 +96,4 @@ why/
 posh-themes
 .config/GIMP/
 .config/GitHub Desktop/
-
+.config/gtk-2.0/
