--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -35,10 +35,10 @@ markup=none
 # See the script for details.
 [volume]
 label=VOL
-#label=♪
+#label=♪ 
 instance=Master
 #instance=PCM
-interval=once
+interval=1
 signal=10
 
 # Memory usage
@@ -94,14 +94,14 @@ min_width=CPU: 100.00%
 # The battery instance defaults to 0.
 [battery]
 label=BAT
-#label=⚡
+#label= 
 #instance=1
 interval=30
 
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%d-%m-%Y %H:%M:%S'
 interval=1
 
 # Generic media player support
