--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,11 @@ JavaFX/
 #29.01.2025
 .nvidia-settings-rc
 installator/
+
+#23.03.2025
+.config/Kiwix/
+.cofig/forcepoint/
+.putty/
+.ssh/
+#tmux plugin github
+.tmux/plugins/tmux-resurrect/
