--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -40,6 +40,7 @@ instance=Master
 #instance=PCM
 interval=1
 signal=10
+command=/usr/share/i3blocks/volume 5 pulse
 
 # Memory usage
 #
@@ -108,11 +109,11 @@ interval=1
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
-
+[mediaplayer]
+command=$SCRIPT_DIR/mediaplayer
+instance=spotify
+interval=5
+signal=10
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
