--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,10 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -selection clipboard"
 set -g base-index 1
 setw -g pane-base-index 1
 
+#Status line tmux
+set -g status-bg black
+set -g status-fg white
+
 #------------------------------------------------------------------------------
 #plugin time
 # List of plugins
